--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,13 @@
-
-<!DOCTYPE html>
-<!--suppress ALL -->
 <html>
-<head>
-  <link rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css">
-
-  <script src="https://unpkg.com/core-js/client/shim.min.js"></script>
-  <script src="https://unpkg.com/zone.js@0.7.4?main=browser"></script>
-  <script src="https://unpkg.com/systemjs@0.19.39/dist/system.src.js"></script>
-  <script src="systemjs.config.js"></script>
-  <script>
-    System.import('script.ts').catch(function (err) {
-      console.error(err);
-    });
-  </script>
-</head>
-
-<body class="container m-t-1">
-<app-joke></app-joke>
-<app-joke-list></app-joke-list>
-</body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  </head>
+  <body>
+<div>
+  <app-joke-list></app-joke-list>
+</div>
+    </body>
 </html>
