--- a/src/app/joke/joke.component.css
+++ b/src/app/joke/joke.component.css
@@ -1,4 +1,34 @@
-.red{
-    color: red;
-    font-size: 40px;
+.joke {
+  padding: 32px;
+  background-color: gainsboro;
+  border: 1px solid #eeeeee;
+  border-radius: 6px;
+  margin: 32px;
 }
+.b{
+    
+  align-items: flex-start;  
+    
+}
+.p{
+    font-size: 80px;
+    font-style: oblique;
+    
+  align-items: flex-start;  
+    
+}
+#sides{
+margin:0;
+}
+#left{
+float:left;
+width:20%;
+overflow:hidden;
+    background-color: antiquewhite;
+}
+#right{
+float:left;
+width:80%;
+overflow:hidden;
+    background-color: bisque;
+} 
