--- a/src/app/joke-list/joke-list.component.html
+++ b/src/app/joke-list/joke-list.component.html
@@ -4,6 +4,12 @@
   <app-joke
     *ngFor="let joke of jokeList"
     [data]="joke">
+    <div>Normal content projection</div>
 
+    <!--<h3>Hi from Content Projection</h3>-->
+    <!--<p>Hola from content Projection</p>-->
+
+    <!--<div class="title">this is title</div>-->
+    <!--<div class="description">this is title</div>-->
   </app-joke>
 </div>
