--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,25 @@
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  </head>
-  <body>
-<div>
-  <app-joke-list></app-joke-list>
+<div class="container">
+  <!--<app-collapse>-->
+    <!--<div class="title">-->
+      <!--<h2>Hello i'm title</h2>-->
+    <!--</div>-->
+    <!--<div class="description">-->
+      <!--<p>Hola i'm description</p>-->
+    <!--</div>-->
+  <!--</app-collapse>-->
+
+  <app-carousel [delay]="1000">
+    <app-carousel-item>
+    <h1>1</h1>
+    <img src="https://unsplash.it/200" alt=""></app-carousel-item>
+    <app-carousel-item>
+      <h1>2</h1>
+      <img src="https://unsplash.it/200" alt="">
+    </app-carousel-item>
+    <app-carousel-item>
+      <h1>3</h1>
+      <img src="https://unsplash.it/200" alt="">
+    </app-carousel-item>
+  </app-carousel>
+
 </div>
-    </body>
-</html>
