--- a/src/app/joke/joke.component.html
+++ b/src/app/joke/joke.component.html
@@ -1,15 +1,18 @@
-<div >
-  <div id="left" >
-       <p class="p">{{ data.X }}</p>
-    </div>
-      <div id="right"  >
-   <h1>{{ data.Book }}</h1>
-    <p>{{ data.title }}</p>
-          
-           <a  class="glyphicon glyphicon-circle-arrow-down" (click)="data.toggle1()">download</a>
-    
-    <a class="glyphicon glyphicon-circle-arrow-up" (click)="data.toggle2()" >upload</a>
-          </div>
-  
- 
+<div class="joke">
+  <div [hidden]="!data.hide">
+    <h1>{{ data.setup }}</h1>
+    <p>{{ data.punchline }}</p>
+  </div>
+  <div class="content-proj">
+    <!--<ng-content></ng-content>-->
+
+    <ng-content select="h3"></ng-content>
+    <ng-content select="p"></ng-content>
+
+    <!--<ng-content select=".title"></ng-content>-->
+    <!--<ng-content select="decription"></ng-content>-->
+  </div>
+  <button (click)="data.toggle()">
+    {{ data.hide ? 'Hide' : 'Show' }}
+  </button>
 </div>
