--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+
   <!--<app-collapse>-->
     <!--<div class="title">-->
       <!--<h2>Hello i'm title</h2>-->
@@ -8,18 +8,40 @@
     <!--</div>-->
   <!--</app-collapse>-->
 
-  <app-carousel [delay]="1000">
-    <app-carousel-item>
-    <h1>1</h1>
-    <img src="https://unsplash.it/200" alt=""></app-carousel-item>
-    <app-carousel-item>
-      <h1>2</h1>
-      <img src="https://unsplash.it/200" alt="">
-    </app-carousel-item>
-    <app-carousel-item>
-      <h1>3</h1>
-      <img src="https://unsplash.it/200" alt="">
-    </app-carousel-item>
-  </app-carousel>
+ <app-coll>
+  <app-coll-item>
+    Collapsible Group Item #1
 
-</div>
+    <p class="card-body"  card-body>
+     Anim pariatur cliche reprehenderit, enim eiusmod high
+     life accusamus terry richardson ad squid. 3 wolf moon officia aute,
+     non cupidatat skateboard dolor brunch.
+
+   </p>
+  </app-coll-item>
+
+
+   <app-coll-item>
+     Collapsible Group Item #2
+     <p class="card-body"  card-body>
+     Anim pariatur cliche reprehenderit, enim eiusmod high
+     life accusamus terry richardson ad squid. 3 wolf moon officia aute,
+     non cupidatat skateboard dolor brunch.
+
+   </p>
+     </app-coll-item>
+   <app-coll-item>
+     Collapsible Group Item #3
+
+     <p class="card-body"  card-body>
+     Anim pariatur cliche reprehenderit, enim eiusmod high
+     life accusamus terry richardson ad squid. 3 wolf moon officia aute,
+     non cupidatat skateboard dolor brunch.
+
+   </p>
+   </app-coll-item>
+
+
+
+ </app-coll>
+
