--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,8 @@
     <!--</div>-->
   <!--</app-collapse>-->
 
- <app-coll>
-  <app-coll-item>
+ <app-coll #p>
+<app-coll-item>
     Collapsible Group Item #1
 
     <p class="card-body"  card-body>
@@ -18,7 +18,7 @@
      non cupidatat skateboard dolor brunch.
 
    </p>
-  </app-coll-item>
+</app-coll-item>
 
 
    <app-coll-item>
